--- a/KingyoLanding/index.html
+++ b/KingyoLanding/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Horizons by TEMPLATED</title>
+    <title>Kingyo</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
