--- a/KingyoLanding/index.html
+++ b/KingyoLanding/index.html
@@ -159,6 +159,7 @@
             </div>
         </section>
     </div>
+    <!-- missao/visao/valores -->
     <div class="wrapper style2">
         <section class="container"></section>
         <header class="major">
@@ -166,7 +167,7 @@
             <h2>Missão!</h2>
         </header>
     </div>
-    
+
 
     <!-- Footer -->
     <div id="footer">
