--- a/KingyoLanding/index.html
+++ b/KingyoLanding/index.html
@@ -25,16 +25,12 @@
     <div id="header">
 
         <div class="container">
-
-
             <!-- Logo -->
             <div class="logo">
                 <section>
                     <img class="img-fluid" src="images/LOGOKINGYOBRANCO.png" alt="">
                 </section>
             </div>
-
-
             <!-- Banner -->
             <div id="banner">
                 <div class="container">
@@ -50,7 +46,6 @@
             </div>
         </div>
     </div>
-
     <!-- Featured -->
     <div class="wrapper style2">
         <section class="container">
@@ -71,7 +66,6 @@
                     <a class="image feature"><img src="images/pic04.jpg" alt=""></a>
                     <p>Administre todas informações do seu pet pelo seu smartphone durante suas atividades diárias.</p>
                 </section>
-
             </div>
         </section>
     </div>
@@ -83,41 +77,36 @@
         </section>
         <div class="row no-collapse-1">
             <section class="4u">
-                <h3>Plano Gratuito</h3>
+                <h2>Plano Gratuito</h2>
                 <p>Limite de 3 Pets.</p>
                 <p>Historico dos Pets.</p>
                 <p>Lembrete dos eventos importantes.</p>
                 <p>Adicionar profissional aos favoritos.</p>
             </section>
             <section class="4u">
-                <h3>Plano Basico para Tutor R$20,00</h3>
+                <h2>Plano Basico para Tutor R$20,00</h2>
                 <p>Limite de 10 Pets.</p>
                 <p>Historico dos Pets.</p>
                 <p>Lembrete dos eventos importantes.</p>
                 <p>Adicionar profissional aos favoritos.</p>
             </section>
             <section class="4u">
-                <h3>Plano Tutor Avançado R$35,00</h3>
+                <h2>Plano Tutor Avançado R$35,00</h2>
                 <p>Pets ilimitados</p>
                 <p>Historico dos Pets.</p>
                 <p>Lembrete dos eventos importantes.</p>
                 <p>Adicionar profissional aos favoritos.</p>
             </section>
             <section class="4u">
-                <h3>Plano para profissionais R$80,00</h3>
+                <h2>Plano para profissionais R$80,00</h2>
                 <p>Agendar compromisso</p>
                 <p>Receber notificações</p>
                 <p>Ver histórico do paciente</p>
                 <p>Divulgação dos serviços oferecidos</p>
                 <p>Lealdade do consumidor</p>
             </section>
-
         </div>
     </div>
-
-
-
-
     <!-- Main -->
     <div id="main" class="wrapper style1">
         <section class="container">
@@ -155,20 +144,36 @@
                         </ul>
                     </section>
                 </div>
-
             </div>
         </section>
     </div>
-    
-
-
+    <!-- missao-->
+    <div class="wrapper style2">
+        <section class="container">
+            <header class="major">
+                <h2>Nossa cultura!</h2>
+            </header>
+            <div class="row no-collapse-1">
+                <section class="4u">
+                    <h3>Missão</h3>
+                    <p>Nossa missão é criar soluções eficazes para os apaixonados por pets.</p>
+                </section>
+                <section class="4u">
+                    <h3>Visão</h3>
+                    <p>Pretendemos nos tornar uma Startup com um forte nome quando a questão é voltada para o mundo pet.</p>
+                </section>
+                <section class="4u">
+                    <h3>Valores</h3>
+                    <p>Nossos valores são: sustentabilidade, respeito à vida, eficácia e responsabilidade.</p>
+                </section>
+            </div>
+        </section>
+    </div>
     <!-- Footer -->
     <div id="footer">
         <div class="container">
             <section class="container">
-
                 <div class="row">
-
                     <!-- Content -->
                     <div class="6u">
                         <section>
